--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -1,10 +1,15 @@
 .navbar {
     font-size: 2rem;
     font-family: 'Oswald';
-    height: 3.5rem;
     background: var(--dark-blue);
     color: white;
     padding: 0 1rem;
     display: flex;
     align-items: center;
+    font-weight: 600;
+    grid-area: navbar;
+}
+
+.navbar span {
+    font-weight: 400;
 }
