--- a/src/app.css
+++ b/src/app.css
@@ -13,3 +13,13 @@ body {
 
     background: var(--light);
 }
+
+.app {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 5fr; 
+    grid-template-rows: 4rem auto;
+    grid-template-areas:
+        "navbar navbar"
+        "sidebar body";
+}
