--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +8,7 @@
 
 body {
     font-size: 16px;
+    font-family: 'Source Sans Pro';
     --light: #f5f5f5;
     --dark-blue: #364F6B;
     --primary: #3FC1C9;
