--- a/src/Components/Sidebar/style.css
+++ b/src/Components/Sidebar/style.css
@@ -6,6 +6,10 @@
     padding: 0 1em;
 }
 
+.sidebar .column {
+    flex-direction:  column;
+}
+
 .sidebar__field {
     display: flex;
     justify-content: space-between;
@@ -25,6 +29,10 @@
 
 .sidebar__plusButton:hover, .sidebar__minusButton:hover {
     color: var(--primary)
+}
+
+.sidebar__field .learningRateInput {
+    width: 40%;
 }
 
 * {
